...
                5, 1, 12, 16 -> "同人志"
                6, 9, 13, 17 -> "单行本"
                7, 10, 14, 18 -> "杂志短篇"
                19, 20, 21 -> "韩漫"
                else -> "其他"
            }
            else -> "分类"
        }
    }.map { (title, names) -> ContentCategoryGroup(title, names.map { ContentCategory(it) }) }
}

